--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -3,6 +3,7 @@
         h2.text= title
         a(href="/") 首页
         span &nbsp;|&nbsp;
-        a(href="/email/list") 资源列表页
+        a(href="/article/list") 杂志列表
         span &nbsp;|&nbsp;
-        a(href="/download" target="_blank") 资源下载页
+        a(href="/email/list") 邮件列表
+        span.message #{message}
