--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -3,36 +3,19 @@ extends ../layout
 block content
   .container
         .row.col-xs-12
-            label.index 发送邮件
-            form.form-horizontal.index(method="post", action="/email/send" enctype="multipart/form-data")
+            label.index 添加杂志
+            form.form-horizontal.index(method="post", action="/article/add" enctype="multipart/form-data")
                 .form-group                        
                     .col-xs-6
                         input.form-control.resource1(type="text" name="title" value="" placeholder="请输入主题")
                     .col-xs-10
                         textarea.form-control.resource2(name="content" rows="10" cols="20"  value="" placeholder="请输入邮件内容")
                     .col-xs-3
+                        input.form-control.resource1(type="text" name="attachmentId" value=Date.now() placeholder="请输入邮件内容")
+                    .col-xs-3
                         input.form-control.resource3(type="file" name="file" value="")
                     .col-xs-2
-                        button.btn.btn-primary.resource4.send(type="submit") 发送
-
-
-
-    .container
-        .row.col-xs-12
-            label.index 邮件发送状态
-            form.form-horizontal.index(method="post", action="/email/pause" enctype="multipart/form-data")
-                .form-group
-                    .col-xs-10
-                        input.form-control.resource5(type="range" name="process" value=value min=0 max=max)
-                    
-                    .col-xs-3.process
-                        span.text= value
-                        span /
-                        span.text= max
-                    .col-xs-4
-                        button.btn.btn-primary.resource6.pause(type="submit") 暂停
-
-
+                        button.btn.btn-primary.resource4.add(type="submit") 添加
   .container
         .row.col-xs-12
             label.index 上传客户列表
