--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,98 +1,87 @@
 .nav {
-    margin-bottom: 10px
+	margin-bottom: 10px
 }
 
 .row {
-    margin-bottom: 10px
+	margin-bottom: 10px
 }
 
 .myAlert {
-    margin-bottom: 0px
+	margin-bottom: 0px
 }
 
 .op .btn {
-    margin-right: 10px;
-    margin-top: -6px;
-    margin-left: 10px;
+	margin-right: 10px;
+	margin-top: -6px;
+	margin-left: 10px;
 }
 
 .form-group .btn {
-    margin-right: 10px
+	margin-right: 10px
 }
 
 th,
 td {
-    text-align: center;
-    word-break: keep-all;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+	text-align: center;
+	word-break: keep-all;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .list {
-    margin-bottom: 70px;
+	margin-bottom: 70px;
 }
 
 .track td:not(.op):not(.time) {
-    max-width: 120px
+	max-width: 120px
 }
 
 .op {
-    width: 50px
+	width: 50px
 }
 
 .checkbox {
-    margin: 0px -15px 0 15px;
+	margin: 0px -15px 0 15px;
 }
 
 .all {
-    height: 10px
-}
-
-input{
-    margin: 10px;
-}
-
-textarea{
-    margin: 10px;
-}
-
-.resource4 {
-    margin: 10px;
-}
-
-.process{
-    width: 150px;
-}
-.process span{
-    display: inline-block;
-    font-size: 20px;
-    line-height: 20px;
-    margin: 20px 0 0 0;
-}
-
-.align{
-    margin: 10px 0 0 0;
-}
-
-.resource8{
-    margin: 10px 0 0 0;
-}
-
-label.index{
-    padding: 30px 0 5px;
-    font-size: 20px;
-    color: #333333;
-}
-
-form.index{
-    border: 1px solid #999999;
-}
-
-.pause{
-    margin: 10px;
+	height: 10px
 }
 
 span.message{
-    float: right;
+	float: right;
+}
+
+a{
+	display:inline-block;
+	font-size: 14px;
+	color: #fff;
+}
+
+a:hover{
+	cursor: pointer;
+	color: #fff;
+	text-decoration: none;
+}
+
+.page-header a{
+	color: #fc6c0d;
+}
+
+.page-header a:hover{
+	color: #000;
+}
+
+textarea{
+	margin: 10px 0;
+}
+
+.hide{
+	opacity: 1;
+}
+
+input.txt{
+	display: inline-block;
+	margin-bottom: 20px;
 }
