--- a/app/views/pages/articleupdate.jade
+++ b/app/views/pages/articleupdate.jade
@@ -16,4 +16,4 @@ block content
           .col-xs-3
             input.form-control(type="file" name="file")
           .col-xs-2
-            button.btn.btn-primary(type="submit") 添加
+            button.btn.btn-primary(type="submit") 修改
