email error code

--- a/app/views/pages/articlelist.jade
+++ b/app/views/pages/articlelist.jade
@@ -15,11 +15,11 @@ block content
 				thead
 					tr
 						th
-						th 杂志标题
-						th 杂志内容
-						th 附件名称
-						th 杂志发送状态
-						th 操作
+						th.col-xs-1 杂志标题
+						th.col-xs-8 杂志内容
+						th.col-xs-1 附件名称
+						th.col-xs-2 杂志发送状态
+						th.col-xs-2 操作
 				tbody
 					each item in articles
 						tr(class="item-id-#{item._id}")
