--- a/app/views/pages/emaillist.jade
+++ b/app/views/pages/emaillist.jade
@@ -1,41 +1,43 @@
 extends ../layout
 
 block content
-	.container
-		.row.col-xs-12
-			form.form-horizontal(method="get", action="/email/search")
-				.form-group
-					.col-xs-2
-					.col-xs-5
-						input.form-control(type="email" name="address" value="" placeholder="请输入邮件地址")
-					.col-xs-4
-						button.btn.btn-primary(type="submit") 查找
-						.btn.btn-info
-							a(href="/email/insert") 添加
-		.row.col-xs-12
-			table.table.table-hover.table-border.list.track
-				thead
-					tr
-						th
-						th.col-xs-1 状态码
-						th.col-xs-1 姓名
-						th.col-xs-3 地址
-						th.col-xs-4 状态
-						th.col-xs-1 操作
-				tbody
-					each item in emails
-						tr(class="item-id-#{item._id}")
-							input(type="hidden" name="url" value=item.url)
-							td
-								label.checkbox
-									input(type="checkbox" name="subBox")
-							td #{item.status}
-							td #{item.name}
-							td #{item.address}
-							td(title="#{item.errorReason}") #{item.errorReason}
-							td.op
-								.btn.btn-info.btn-sm
-									a(href="/email/update?_id=" + "#{item._id}" + "&name=" + "#{item.name}" + "&address=" + "#{item.address}") 修改
-								.btn.btn-danger.btn-sm.del(data-id="#{item._id}") 删除
-	script(src="/js/email.js")
-	script(src="/js/export.js")
+  .container
+    .row.col-xs-12
+      form.form-horizontal(method="get", action="/email/search")
+        .form-group
+          .col-xs-2
+          .col-xs-5
+            input.form-control(type="email" name="address" value="" placeholder="请输入邮件地址")
+          .col-xs-4
+            button.btn.btn-primary(type="submit") 查找
+            .btn.btn-info
+              a(href="/email/insert") 添加
+            .btn.btn-info
+              a(href="/email/download") 下载
+    .row.col-xs-12
+      table.table.table-hover.table-border.list.track
+        thead
+          tr
+            th
+            th.col-xs-1 状态码
+            th.col-xs-1 姓名
+            th.col-xs-3 地址
+            th.col-xs-4 状态
+            th.col-xs-1 操作
+        tbody
+          each item in emails
+            tr(class="item-id-#{item._id}")
+              input(type="hidden" name="url" value=item.url)
+              td
+                label.checkbox
+                  input(type="checkbox" name="subBox")
+              td #{item.status}
+              td #{item.name}
+              td #{item.address}
+              td(title="#{item.errorReason}") #{item.errorReason}
+              td.op
+                .btn.btn-info.btn-sm
+                  a(href="/email/update?_id=" + "#{item._id}" + "&name=" + "#{item.name}" + "&address=" + "#{item.address}") 修改
+                .btn.btn-danger.btn-sm.del(data-id="#{item._id}") 删除
+  script(src="/js/email.js")
+  
