--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,87 +1,93 @@
 .nav {
-	margin-bottom: 10px
+  margin-bottom: 10px
 }
 
 .row {
-	margin-bottom: 10px
+  margin-bottom: 10px
 }
 
 .myAlert {
-	margin-bottom: 0px
+  margin-bottom: 0px
 }
 
 .op .btn {
-	margin-right: 10px;
-	margin-top: -6px;
-	margin-left: 10px;
+  margin-right: 10px;
+  margin-top: -6px;
+  margin-left: 10px;
 }
 
 .form-group .btn {
-	margin-right: 10px
+  margin-right: 10px
 }
 
 th,
 td {
-	text-align: center;
-	word-break: keep-all;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
+  text-align: center;
+  word-break: keep-all;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .list {
-	margin-bottom: 70px;
+  margin-bottom: 70px;
 }
 
 .track td:not(.op):not(.time) {
-	max-width: 120px
+  max-width: 120px
 }
 
 .op {
-	width: 50px
+  width: 50px
 }
 
 .checkbox {
-	margin: 0px -15px 0 15px;
+  margin: 0px -15px 0 15px;
 }
 
 .all {
-	height: 10px
+  height: 10px
 }
 
 span.message{
-	float: right;
+  float: right;
 }
 
 a{
-	display:inline-block;
-	font-size: 14px;
-	color: #fff;
+  display:inline-block;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+}
+
+a:visited{
+  color: #fff;
+  text-decoration: none;
 }
 
 a:hover{
-	cursor: pointer;
-	color: #fff;
-	text-decoration: none;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
 }
 
 .page-header a{
-	color: #fc6c0d;
+  color: #fc6c0d;
 }
 
 .page-header a:hover{
-	color: #000;
+  color: #000;
 }
 
 textarea{
-	margin: 10px 0;
+  margin: 10px 0;
 }
 
 .hide{
-	opacity: 1;
+  opacity: 1;
 }
 
 input.txt{
-	display: inline-block;
-	margin-bottom: 20px;
+  display: inline-block;
+  margin-bottom: 20px;
 }
